bugfix: LookupAsynch looses requests when used from multiple threads due to lack or invalid synchronization when accessing static fields in LookupAsynch and ExtendedNonblockingResolver.
http://sourceforge.net/tracker/?func=detail&aid=3383629&group_id=194284&atid=948812